# imagazine

./: db.sqlite3  db1.sqlite3  manage.py  pyproject.toml
imag/: asgi.py  settings.py  urls.py  wsgi.py
imagazine/: asgi.py  settings.py  test_email.py  urls.py  views.py  wsgi.py
imagazine/cart/: admin.py  apps.py  cart.py  forms.py  mixins.py  models.py  urls.py  views.py
imagazine/cart/migrations/: 0001_initial.py  0002_initial.py
imagazine/coupons/: admin.py  apps.py  forms.py  models.py
imagazine/coupons/migrations/: 0001_initial.py
imagazine/goods/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
imagazine/goods/migrations/: 0001_initial.py  0002_gallerygame_galleryconsole.py  0003_alter_console_description_alter_game_description.py  0004_alter_gallerygame_good.py  0005_remove_console_status_remove_game_status_and_more.py  (+1 more)
imagazine/labels/: admin.py  apps.py  models.py
imagazine/users/: apps.py  authentication.py  forms.py  mixins.py  models.py  urls.py  views.py
static/css/: sidebars.css
templates/: base.html  hb.html  main.html
templates/cart/: index.html  order.html  order_profile.html  orders.html
templates/goods/: category.html  console.html  goods.html  index.html  index_love.html  profile.html  profile_console.html
templates/users/: create.html  delete.html  email_confirmation_sent.html  email_not_confirm.html  login.html  login1.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  update.html
(+5 files in other folders)
