[tool.poetry]
name = "imagazine"
version = "0.1.0"
description = ""
authors = ["Farid Zainulin <10221278@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
